[project]
name = "opencv"
version = "0.1.0"
description = "OpenCV Learning"
authors = [
    {name = "dv.sergeev2",email = "dv.sergeev2@stalmail.org"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.5,<4.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
